--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Coming soon!
+ARC SURFASCOPE
+
+Vibrational spectroscopies of molecules, materials and nanostructures, with light in the infra-red (IR) and optical (Raman)
+frequency range, are used in many scientiﬁc domains, from basic physics to biomedical applications, because these nondestructive
+methods have unmatched energy resolution and unique identiﬁcation capabilities. However their limited spatial resolution and their
+low cross section are major drawbacks. In the last decades, major progress stemmed from the enhancement of spectroscopic responses
+when the applied electromagnetic radiation is resonant with a nanostructured plasmonic system, usually a surface or a tip, close
+to which the vibrating molecule is placed, leading to Surface Enhanced Vibrational Spectroscopies (SEVS).
+The most popular SEVS are SERS (Surface Enhanced Raman Spectroscopies) and SEIRA (Surface Enhanced IR Absorption).
+
+The simulation of SEVS is a major scientiﬁc challenge. While the vibrational response of a system can now be computed
+with high accuracy by ﬁrst-principles (1stP) quantum atomistic numerical methods, the calculation of the plasmonic response
+of a nanostructured system relies mainly on classical parameterized approaches. Indeed, 1stP calculations are very demanding
+in terms of computational time, which proscribes the accurate simulation of the plasmon resonant response of nanostructures,
+with typically more than one million active electrons. A uniﬁed method is however necessary to tackle unanswered questions
+related to the interpretation of the experimental data.
+
+Various efforts have been devoted recently on second-principles (2ndP) methods, targeting mesoscale systems while keeping
+1stP accuracy predictive power. 2ndP approaches aim at ﬁnding an effective way to reproduce 1stP data while avoiding
+the full quantum treatment of the electronic system. For the atomic vibrations, effective atomic potentials integrating
+out electronic degrees of freedom and accurately describing the 1stP Born-Oppenheimer potential energy surface can be constructed.
+Low-lying electronic excitations have also been tackled recently.
+However, the current status of the formalism does not deliver the crucial matching of the dielectric response of the material
+between the 1stP data and the corresponding 2ndP simulations.
+
+In SURFASCOPE, we will design and implement a 2ndP numerical approach to interpret and guide SEVS.
+In order to remove the limitations of the existing formalism, the missing density response will be cast
+in terms of simpliﬁed treatments, either non-quantum (e.g. hydrodynamic or atomic polarizability), or quantum
+(e.g. simpliﬁed pseudo-orbitals or localized plasmon-poles). We will interface this 2ndP approach with at least
+two different state-of-the-art 1stP software packages based on quantum chemistry and material science methods.
+The effect of the plasmonic local ﬁeld on the vibrational properties (frequency, activity,...) will then be fully
+described for systems of millions of electrons with a precision that will be derived from 1stP.
+This approach will allow us to deal with realistic nanostructured systems. We will demonstrate the capabilities
+of the new methodology by studying paradigmatic systems, recently investigated experimentally, based on graphene,
+gold resonant picocavities and metallic nanoantennas.
