--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-ARC SURFASCOPE
+<H1>ARC SURFASCOPE</H1>
 
+<H2>Principal Investigators:</H2>
+Xavier Gonze, Luc Henrard, Vincent Liégeois, and Gian-Marco Rignanese
+
+<H2>Researchers involved</H2>
+Alexandre Cloots and Tanguy Banse
+
+<H2>Summary</H2>
 Vibrational spectroscopies of molecules, materials and nanostructures, with light in the infra-red (IR) and optical (Raman)
 frequency range, are used in many scientiﬁc domains, from basic physics to biomedical applications, because these nondestructive
 methods have unmatched energy resolution and unique identiﬁcation capabilities. However their limited spatial resolution and their
