--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <H1>ARC SURFASCOPE</H1>
+<figure>
+  <img src="surfascope.png" style="width:100%">
+</figure>
 
 <H2>Principal Investigators:</H2>
 Xavier Gonze, Luc Henrard, Vincent Liégeois, and Gian-Marco Rignanese
