--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<H1>ARC SURFASCOPE</H1>
 <figure>
   <img src="surfascope.png" style="width:100%">
 </figure>
+<H1>ARC SURFASCOPE</H1>
 
 <H2>Principal Investigators:</H2>
 Xavier Gonze, Luc Henrard, Vincent Liégeois, and Gian-Marco Rignanese
@@ -16,7 +16,7 @@ methods have unmatched energy resolution and unique identiﬁcation capabilities
 low cross section are major drawbacks. In the last decades, major progress stemmed from the enhancement of spectroscopic responses
 when the applied electromagnetic radiation is resonant with a nanostructured plasmonic system, usually a surface or a tip, close
 to which the vibrating molecule is placed, leading to Surface Enhanced Vibrational Spectroscopies (SEVS).
-The most popular SEVS are SERS (Surface Enhanced Raman Spectroscopies) and SEIRA (Surface Enhanced IR Absorption).
+The most popular SEVS are SERS (Surface Enhanced Raman Spectroscopies) and SEIRA (Surface Enhanced IR Absorption).<BR>
 <BR>
 
 The simulation of SEVS is a major scientiﬁc challenge. While the vibrational response of a system can now be computed
@@ -24,7 +24,7 @@ with high accuracy by ﬁrst-principles (1stP) quantum atomistic numerical metho
 of a nanostructured system relies mainly on classical parameterized approaches. Indeed, 1stP calculations are very demanding
 in terms of computational time, which proscribes the accurate simulation of the plasmon resonant response of nanostructures,
 with typically more than one million active electrons. A uniﬁed method is however necessary to tackle unanswered questions
-related to the interpretation of the experimental data.
+related to the interpretation of the experimental data.<BR>
 <BR>
 
 Various efforts have been devoted recently on second-principles (2ndP) methods, targeting mesoscale systems while keeping
@@ -33,7 +33,7 @@ the full quantum treatment of the electronic system. For the atomic vibrations, 
 out electronic degrees of freedom and accurately describing the 1stP Born-Oppenheimer potential energy surface can be constructed.
 Low-lying electronic excitations have also been tackled recently.
 However, the current status of the formalism does not deliver the crucial matching of the dielectric response of the material
-between the 1stP data and the corresponding 2ndP simulations.
+between the 1stP data and the corresponding 2ndP simulations.<BR>
 <BR>
 
 In SURFASCOPE, we will design and implement a 2ndP numerical approach to interpret and guide SEVS.
@@ -45,5 +45,5 @@ The effect of the plasmonic local ﬁeld on the vibrational properties (frequenc
 described for systems of millions of electrons with a precision that will be derived from 1stP.
 This approach will allow us to deal with realistic nanostructured systems. We will demonstrate the capabilities
 of the new methodology by studying paradigmatic systems, recently investigated experimentally, based on graphene,
-gold resonant picocavities and metallic nanoantennas.
+gold resonant picocavities and metallic nanoantennas.<BR>
 <BR>
