--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <H1>ARC SURFASCOPE</H1>
 
 <H2>Principal Investigators:</H2>
-Xavier Gonze, Luc Henrard, Vincent Liégeois, and Gian-Marco Rignanese
+<a href="http://perso.uclouvain.be/xavier.gonze/" target="_blank">Xavier Gonze</a>,
+<a href="https://www.unamur.be/sciences/physique/ur/lps/Plasmonique" target="_blank">Luc Henrard</a>,
+<a href="https://www.unamur.be/sciences/chimie/lct/membres/vincent-liegeois" target="_blank">Vincent Liégeois</a>,
+and
+<a href="http://perso.uclouvain.be/gian-marco.rignanese/" target="_blank">Gian-Marco Rignanese</a>
 
 <H2>Researchers involved</H2>
 Alexandre Cloots and Tanguy Banse
