--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <figure>
-  <img src="surfascope.png" style="width:20%">
+  <img src="surfascope.png" width="200">
 </figure>
 <H1>ARC SURFASCOPE</H1>
 
